--- a/eda.ipynb
+++ b/eda.ipynb
@@ -3201,10 +3201,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# feature scaling, sklearn -library\n",
+    "# Machine Learning\n",
+    "# Linear Regression\n",
+    "# Logistic Regression\n",
+    "# Decision Tree \n",
+    "# Random Forest\n",
+    "# XGBOOST\n",
+    "# SVM\n",
+    "# KNN\n",
+    "# K-means clustering\n",
+    "# Gradio\n",
+    "# streamlit - deploy the model on the server(streamlit)\n",
+    "# fast api\n",
+    "# flask app"
+   ]
   }
  ],
  "metadata": {
